Fix:error - signIn btn work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/api/auth/[...nextAuth]/route.js"
+    "src/app/api/auth/[...nextAuth]/route.js",
+    "src/components/Provider.js"
   ],
   "exclude": ["node_modules"]
 }
