--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "src/components/Provider.js",
     "src/app/api/user/route.js",
     "src/utils/database.js",
-    "src/app/create/page.jsx"
+    "src/app/create/page.tsx"
   ],
   "exclude": ["node_modules"]
 }
